kubernetes/deployment/bme/templates/ptx-scheduler-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SCHEDULER}
  namespace: ${DEF_NS}
  labels:
    app: ${SCHEDULER}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SCHEDULER}
  template:
    metadata:
      labels:
        app: ${SCHEDULER}
    spec:
      serviceAccountName: ${SCHEDULER}
      containers:
        - name: ${SCHEDULER}
          image: ${REGISTRY}/ptx-edge/scheduler:1.0
          imagePullPolicy: IfNotPresent
          command: [ "python3", "-m", "app", "--verbose" ]
---
