kubernetes/deployment/bme/templates/ptx-pdc-daemon.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ${PDC}
  namespace: ${PTX_NS}
  labels:
    app: ${PDC}
    app.kubernetes.io/name: ${PDC}
    app.kubernetes.io/version: ${PDC_VER}
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
spec:
  selector:
    matchLabels:
      app: ${PDC}
  template:
    metadata:
      labels:
        app: ${PDC}
        app.kubernetes.io/name: ${PDC}
        app.kubernetes.io/version: ${PDC_VER}
        app.kubernetes.io/component: connector
        app.kubernetes.io/part-of: ptx-edge
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      serviceAccountName: ${PDC}
      containers:
        - name: connector
          image: ${REGISTRY}/ptx/connector:${PDC_VER}-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: ${PDC_DEF_PORT}
          volumeMounts:
            - name: env
              mountPath: /usr/src/app/.env.production
              subPath: .env.production
              readOnly: true
            - name: config-template
              mountPath: /usr/src/app/dist/src/config.json.tmp
              subPath: config.json.tmp
              readOnly: true
            - name: entrypoint
              mountPath: /usr/src/app/docker/scripts/entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
          command: [ "/bin/sh", "/usr/src/app/docker/scripts/entrypoint.sh" ]
          args: [ "npm", "run", "start" ]
      volumes:
        - name: env
          configMap:
            name: pdc-config
            items:
              - key: .env
                path: .env.production
        - name: config-template
          configMap:
            name: pdc-config
            items:
              - key: config.json
                path: config.json.tmp
        - name: entrypoint
          configMap:
            name: pdc-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
        - name: kube-api-client-cfg
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: ${PDC_ID}
  namespace: ${PTX_NS}
  labels:
    app: ${PDC}
    app.kubernetes.io/name: ${PDC}
    app.kubernetes.io/version: ${PDC_VER}
    app.kubernetes.io/component: connector
    app.kubernetes.io/part-of: ptx-edge
spec:
  selector:
    app: ${PDC}
    connector.dataspace.ptx.org/id: ${PDC_ID}
  type: ClusterIP
  ports:
    - name: pdc-port
      port: ${PDC_DEF_PORT}
---
