kubernetes/deployment/bme/templates/k3d-bme-traefik-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: dashboard-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${TRAEFIK_DASHBOARD_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: dashboard-auth
          namespace: kube-system
      services:
        - name: api@internal
          kind: TraefikService
      serversTransport: traefik-dashboard-trans
  tls:
    secretName: ${API}-tls
    domains:
      - main: ${TRAEFIK_DASHBOARD_DOMAIN}
