kubernetes/deployment/bme/templates/ptx-pdc-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pdc-${DEF_ZONE}
  namespace: ptx-edge
  labels:
    app: pdc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ptx-edge/${DEF_ZONE}/pdc`)
      kind: Rule
      middlewares:
        - name: pdc-${DEF_ZONE}-stripprefix
      services:
        - name: pdc-${DEF_ZONE}
          port: ${PDC_DEF_PORT}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pdc-${DEF_ZONE}-stripprefix
  labels:
    app: pdc
spec:
  stripPrefix:
    prefixes:
      - /ptx-edge/${DEF_ZONE}/pdc
