kubernetes/deployment/bme/templates/ptx-rest-api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${API}-basic-auth
  namespace: ${PTX_NS}
spec:
  basicAuth:
    secret: ${API}-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${API}-secure-headers
  namespace: ${PTX_NS}
spec:
  headers:
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
#---
#apiVersion: traefik.io/v1alpha1
#kind: TLSOption
#metadata:
#  name: tls-opt
#  namespace: ${PTX_NS}
#spec:
#  minVersion: VersionTLS13
#---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ${API}-secure
#  namespace: ${PTX_NS}
#  labels:
#    app: ${API}
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: (Host(`${GW_DOMAIN}`) || Host(`${GW_LOCAL_DOMAIN}`) ) && PathPrefix(`/${API_SUBPATH}`)
#      kind: Rule
#      middlewares:
#        - name: ${API}-basic-auth
#          namespace: ${PTX_NS}
#        - name: ${API}-secure-headers
#          namespace: ${PTX_NS}
#      services:
#        - name: ${API}
#          port: ${API_PORT}
#  tls:
#    certResolver: letsencrypt
#    domains:
#      - main: ${GW_DOMAIN}
#        sans:
#          - "*.${GW_DOMAIN}"
#          - "*.${GW_LOCAL_DOMAIN}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${API}-secure
  namespace: ${PTX_NS}
  labels:
    app: ${API}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX_NS}-${API}-basic-auth@kubernetescrd,${PTX_NS}-${API}-secure-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.tls.options: ${PTX_NS}-tls-opt@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: ${GW_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: ${GW_DOMAIN}
      http:
        paths:
          - path: /${API_SUBPATH}
            pathType: Prefix
            backend:
              service:
                name: ${API}
                port:
                  number: ${API_PORT}
    - host: ${GW_LOCAL_DOMAIN}
      http:
        paths:
          - path: /${API_SUBPATH}
            pathType: Prefix
            backend:
              service:
                name: ${API}
                port:
                  number: ${API_PORT}
  tls:
    - hosts:
        - ${GW_DOMAIN}
---
